# indico-plugins-cern

./: .eslintrc.js  .flake8  .gitignore  .header.yaml  .travis.yml  README.md  README.rst  copyright.yml  package-lock.json  package.json  ruff.toml  run-tests.sh  sphinx-conf.py  tsconfig.json
access_override/: indico_access_override.py  pyproject.toml  setup.cfg
audiovisual/: MANIFEST.in  setup.py  (+4 more)
burotel/: MANIFEST.in  README.md  conftest.py  indico_burotel.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  webpack-bundles.json
burotel/indico_burotel/: __init__.py  blueprint.py  cli.py  controllers.py  notifications.py  plugin.py  tasks.py  tasks_test.py  util.py
burotel/indico_burotel/migrations/: 20211029_1202_564d660d4ddb_create_count_weekdays_function.py
burotel/indico_burotel/models/: count_weekdays.py
cern_access/: MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  webpack-bundles.json
cern_access/indico_cern_access/: __init__.py  blueprint.py  controllers.py  definition.py  forms.py  placeholders.py  plugin.py  schemas.py  task.py  util.py  views.py
cern_access/indico_cern_access/client/: AccessCodeModal.jsx  CERNAccessSection.jsx  CERNAccessSection.module.scss  EnterPersonalDataForm.jsx  RegistrationIdentityDataForm.jsx  RegistrationIdentityDataForm.module.scss  access_code_modal.jsx  enter_personal_data.jsx  i18n.js  index.js  main.scss
cern_access/indico_cern_access/migrations/: 201705151705_96ebe0eab248_add_request_state_table.py  201705151705_96ebe0eab248_add_request_tables.py  20170515_1705_96ebe0eab248_add_request_tables.py  201705181048_850a518b51a8_add_regform_request_state_table.py  20171026_1500_f5eeaf2a9b92_add_birth_related_columns.py  20190705_1616_f46cd5b57a7a_add_license_plate_field.py  20210824_1204_e90cc0f72adc_add_adams_nonce_field.py  20220511_1503_ee88b64f9494_add_accompanying_persons_field.py  20221103_1508_40e98cd40ab0_add_archive_table.py  20230706_1615_ee88b64f9494_add_accompanying_persons_field.py  20241015_1702_92377810f14e_make_reservation_code_unique.py  20241015_1702_92377810f14e_make_reservation_code_unique_and_nullable.py  20241015_1702_92377810f14e_modify_reservation_code_field.py
cern_access/indico_cern_access/models/: access_request_regforms.py  access_requests.py  archived_requests.py  regform_access_requests.py
cern_access/indico_cern_access/templates/: _common.html  access_requests_details.html  cern_access_action_button.html  cern_access_status.html  email.html  event_request_details.html  grant_access.html  identity_data_form.html  identity_data_form_email.html  identity_data_form_management.html  regform_identity_data_section.html  regform_list_widget.html  request_withdrawn_email.html  ticket_email.html
cern_access/tests/: conftest.py  operations_test.py  request_test.py  util_test.py
conversion/: MANIFEST.in  pyproject.toml  pytest.ini  setup.cfg  setup.py
conversion/indico_conversion/: __init__.py  blueprint.py  cli.py  cloudconvert.py  codimd.py  codimd_test.py  conversion.py  plugin.py  tasks.py  util.py
conversion/indico_conversion/client/: index.js  style.scss
conversion/indico_conversion/templates/: pdf_attachment.html
foundationsync/: indico_foundationsync.py  pyproject.toml  setup.cfg  setup.py
foundationsync/indico_foundationsync/: blueprint.py  cli.py  plugin.py  sync.py
i18n_demo/: MANIFEST.in  README.md  pyproject.toml  setup.cfg
i18n_demo/indico_i18n_demo/: blueprint.py  controllers.py  plugin.py
i18n_demo/indico_i18n_demo/templates/: clone_button.html
labotel/: MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  webpack-bundles.json
labotel/indico_labotel/: __init__.py  blueprint.py  cli.py  controllers.py  plugin.py  util.py
labotel/indico_labotel/migrations/: 20240430_1420_3be5a6e16966_create_count_weekdays_function.py
labotel/indico_labotel/models/: count_weekdays.py
payment_cern/: MANIFEST.in  pyproject.toml  pytest.ini  setup.cfg  setup.py
payment_cern/indico_payment_cern/: __init__.py  blueprint.py  controllers.py  plugin.py  postfinance.py  util.py  views.py  zodbimport.py
payment_cern/indico_payment_cern/migrations/: 201505131449_516cae10cec9_use_acl_settings.py
payment_cern/indico_payment_cern/templates/: event_payment_form.html  event_settings_readonly.html  payment_uncertain.html  postfinance_return.html  transaction_details.html
payment_cern/indico_payment_cern/tests/: util_test.py
ravem/: MANIFEST.in  pyproject.toml  pytest.ini  required-build-plugins.json  requirements.test.txt  setup.cfg  setup.py  webpack.config.js
ravem/indico_ravem/: __init__.py  api.py  blueprint.py  controllers.py  operations.py  plugin.py  util.py  zodbimport.py
ravem/indico_ravem/client/: index.js
ravem/indico_ravem/templates/: _ravem_button.html  ravem_button.html  ravem_button_group.html  vc_rooms_list_button.html  vc_rooms_manage_button.html
ravem/tests/: api_test.py  conftest.py  controllers_test.py  operations_test.py  util_test.py
ravem/tests/operations/: connect_test.py  disconnect_test.py
room_assistance/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py  webpack-bundles.json
room_assistance/indico_room_assistance/: __init__.py  blueprint.py  controllers.py  definition.py  forms.py  notifications.py  plugin.py  tasks.py  util.py  views.py
room_assistance/indico_room_assistance/client/: style.scss
room_assistance/indico_room_assistance/migrations/: 20190220_1138_b160812c186b_add_startup_assistance_requests_table.py
themes_cern/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py  webpack-bundles.json
themes_cern/indico_themes_cern/: plugin.py  themes-cern.yaml
themes_lcagenda/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py  webpack-bundles.json
themes_lcagenda/indico_themes_lcagenda/: plugin.py  themes-lcagenda.yaml
zoom_rooms/: .header.yaml  MANIFEST.in  README.md  conftest.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
zoom_rooms/indico_zoom_rooms/: __init__.py  handlers.py  models.py  plugin.py  plugin_test.py  tasks.py  util.py
(+360 files in other folders)
