[project]
name = 'indico-plugin-foundationsync'
version = '3.3-dev'
license = 'MIT'
authors = [{ name = 'Indico Team', email = 'indico-team@cern.ch' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = ['indico>=3.3.dev0', 'oracledb>=1.3.2,<2']

[project.urls]
GitHub = 'https://github.com/indico/indico-plugins-cern'

[project.entry-points.'indico.plugins']
foundationsync = 'indico_foundationsync.plugin:FoundationSyncPlugin'

[build-system]
requires = ['hatchling==1.28.0']
build-backend = 'hatchling.build'

[tool.hatch.build]
packages = ['indico_foundationsync']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]
