[metadata]
name = indico-plugin-i18n-demo
version = 3.3-dev
url = https://github.com/indico/indico-plugins-cern
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12, <3.13
install_requires =
    indico>=3.3

[options.entry_points]
indico.plugins =
    i18n_demo = indico_i18n_demo.plugin:I18nDemoPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
