[metadata]
name = indico-plugin-labotel
version = 3.3-dev
url = https://github.com/indico/indico-plugins-cern
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3.dev0
    pyproj>=3.0.0.post1,<4

[options.entry_points]
indico.plugins =
    labotel = indico_labotel.plugin:LabotelPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
