[metadata]
name = indico-plugin-ravem
version = 3.2.1
url = https://github.com/indico/indico-plugins-cern
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.12
install_requires =
    indico>=3.1
    indico-plugin-vc-zoom>=3.1.dev0,<3.3.dev0

[options.entry_points]
indico.plugins =
    ravem = indico_ravem.plugin:RavemPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
