[metadata]
name = indico-plugin-room-assistance
version = 3.0-dev
url = https://github.com/indico/indico-plugins-cern
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = ~=3.9.0
install_requires =
    indico>=3.0.dev0

[options.entry_points]
indico.plugins =
    room_assistance = indico_room_assistance.plugin:RoomAssistancePlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
