[metadata]
name = indico-plugin-themes-cern
version = 3.2.2
url = https://github.com/indico/indico-plugins-cern
license = MIT
author = Indico Team
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.12
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    themes_cern = indico_themes_cern.plugin:CERNThemesPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
