[project]
name = 'indico-zoom-rooms'
description = 'Zoom rooms/Exchange synchronization plugin'
readme = 'README.md'
version = '3.3-dev'
license = 'MIT'
author = [{ name = 'Indico Team (CERN)', email = 'indico-team@cern.ch' }]
classifiers = [
    'Environment :: Plugins',
    'Environment :: Web Environment',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]
requires-python = '>=3.12.2, <3.13'
dependencies = [
    'indico>=3.3.dev0',
    'indico-plugin-vc-zoom>=3.3-dev'
]

[project.urls]
GitHub = 'https://github.com/indico/indico-plugins'

[project.entry-points.'indico.plugins']
zoom_rooms = 'indico_zoom_rooms.plugin:ZoomRoomsPlugin'

[tool.hatch.build]
packages = ['indico_zoom_rooms']
exclude = [
    '*.no-header',
    '.keep',
    # exclude original client sources (they are all included in source maps anyway)
    'indico_*/client/',
    # no need for tests outside development
    'test_snapshots/',
    'tests/',
    '*_test.py',
]
artifacts = [
    'indico_*/translations/**/messages-react.json',
    'indico_*/translations/**/*.mo',
    'indico_*/static/dist/',
]

[tool.hatch.build.targets.sdist.hooks.custom]
path = '../hatch_build.py'
dependencies = ['babel==2.16.0']
