[metadata]
name = indico-zoom-rooms
version = 3.3-dev
description = Zoom rooms/Exchange synchronization plugin
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/indico/indico-plugins
license = MIT
author = Indico Team (CERN)
author_email = indico-team@cern.ch
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.12.2, <3.13
install_requires =
    indico>=3.3.dev0
    indico-plugin-vc-zoom>=3.3-dev

[options.entry_points]
indico.plugins =
    zoom_rooms = indico_zoom_rooms.plugin:ZoomRoomsPlugin



[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
